--- a/index.html
+++ b/index.html
@@ -501,11 +501,11 @@ h7 {
     <div class="container">
 
 
-      <a href="./p/scratch-rollingsky.html">
+      <a href="./P/slope.html">
         <div class="card">
-          <img src="./mgthumbnails/3d2.png" />
-          <h3>[3D]ボールころころ2</h3>
-          <p>by s00384206 [mobile/pc]</p>
+          <img src="./img/slope.webp" />
+          <h3>Slope</h3>
+          <p>[pc]</p>
         </div>
       </a>
 
