--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ h7 {
     <div class="container">
 
 
-      <a href="./P/slope.html">
+      <a href="/P/Slope.html">
         <div class="card">
           <img src="./img/slope.webp" />
           <h3>Slope</h3>
