--- a/P/Slope.html
+++ b/P/Slope.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../theme.css">
+        <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
     <header>
         <center>
@@ -22,7 +22,7 @@
      <div class="wgHelp">
      </div>
      <wgEmbed>
-         <iframe height="720" width="1300" src="/g/slope/index.html">
+         <iframe height="720" width="1300" src="/G/slope/index.html">
 
          </iframe>
      </wgEmbed>
